Fixing color contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@
 
 .orange-bg {
     background-color: orange;
-    color: white;
+    color: black;
 }
 
 .black-bg {
